# biomodelos-db-utils

./: .gitignore  404.html  README.md  condaenv.yml  dev.yml  gen_pages.py  index.html  main.py  mkdocs.yml  pyproject.toml  records_example.csv  records_example_fail.csv  records_schema.json
bmdbutils/: _helpers.py
bmdbutils/biomodelos/: biomodelos.py  geoserver.py  mongo.py
bmdbutils/biomodelos/schemas/: metadata_models.json  models.json  records.json
bmdbutils/cli/: cli.py
bmdbutils/cli/commands/: ecovars.py  editions.py  ratings.py  setup.py  upload.py
bmdbutils/cli/commands/geoserver/: geoserver.py  setup.py  upsert.py
bmdbutils/cli/commands/mongo/: metadata_models.py  metadatos.py  models_metadata.py  mongo.py  setup.py  upload.py  utils.py  validate.py
bmdbutils/cli/commands/mongo/schema/: species.py
bmdbutils/cli/commands/stats/: downloads.py  groups.py  models.py  stats.py  users.py
bmdbutils/mongo/: upload.py  utils.py
bmdbutils/mongo/schema/: species.py
commands/: ecovars.yml  editions.yml  index.html  mongo.yml  ratings.yml  setup.yml
docs/: commands.md  gen_pages.py  index.md  main.py
docs/commands/: ecovars.yml  editions.yml  geoserver.yml  mongo.yml  ratings.yml  setup.yml  stats.yml
ecovars/: index.html
editions/: index.html
geoserver/: index.html
mongo/: index.html
ratings/: index.html
search/: search_index.json
setup/: index.html
stats/: index.html
summary/: index.html
